# Paper-ITOR-2018

./: README.md
analysis/code/: results_analysis.R
analysis/data/: instances.csv  results.csv
experiments/: run.py
experiments/instances/: readme.txt
source/: CMakeLists.txt
source/lib/: cxxproperties.hpp
source/src/: abort_callback.cpp  abort_callback.h  heuristic.h  heuristic_callback.cpp  heuristic_callback.h  main.cpp  maravilha.cpp  maravilha.h  pool_callback.cpp  pool_callback.h  problem_data.cpp  problem_data.h  rothberg.cpp  rothberg.h  solution_pool.cpp  solution_pool.h
